--- a/backups/config_backups_model.cfg
+++ b/backups/config_backups_model.cfg
@@ -1,5 +1,12 @@
+#!/bin/bash
 
 minBackups=10
 maxBackups=100
-# in bytes
+# in bytes, for example 1 G = 1024*1024*1024 bytes, 50 G = 53687091200 bytes.
 maxBackupsSize=53687091200
+
+
+# # ark serverFiles
+# minBackups=2
+# maxBackups=10
+# maxBackupsSize=13687091200
