--- a/config_model.cfg
+++ b/config_model.cfg
@@ -1,5 +1,5 @@
 #!/bin/bash
-# server config file, all path relative to the dediBash folder
+# server config file, all path relative to the dediBash folder (parent of the bin forlder)
 
 screenName=test
 # screenName=minecraft
