--- a/config_model.cfg
+++ b/config_model.cfg
@@ -1,7 +1,7 @@
 #!/bin/bash
 # server config file, all path relative to the dediBash folder (parent of the bin forlder)
 
-screenName=test
+screenName=dediBash
 # screenName=minecraft
 # screenName=minecraftragna
 # screenName=ark
