--- a/examples/test.cfg
+++ b/examples/test.cfg
@@ -1,6 +1,8 @@
 #!/bin/bash
 # server config file, all path relative to the dediBash folder (parent of the bin forlder)
 
+echo "loading test.cfg"
+
 screenName=test
 
 startCmd() {
