--- a/examples/minecraft_modpack.cfg
+++ b/examples/minecraft_modpack.cfg
@@ -8,6 +8,7 @@ startCmd() {
   # Your start command goes here instead of htop, the rest is used to log errors
 
   # modpack
+  cd serverFiles/Minecraft
   ./startserver.sh # ragnamod
 
   res="$?"
