--- a/examples/arkRagnarok.cfg
+++ b/examples/arkRagnarok.cfg
@@ -8,8 +8,10 @@ startCmd() {
   # Your start command goes here instead of htop, the rest is used to log errors
 
   # ark
+  LOCAL_IP=192.168.1.XX
+  GLOBAL_IP=Y.Y.Y.Y
   cd serverFiles/ShooterGame/Binaries/Linux/
-  ./ShooterGameServer Ragnarok?listen?MultiHome=192.168.1.19?SessionName=zenbisRagnarok?Port=7777?QueryPort=27015?AltSaveDirectoryName=SaveRagnarok?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic=91.182.240.225 -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
+  ./ShooterGameServer Ragnarok?listen?MultiHome="${LOCAL_IP}"?SessionName=zenbisRagnarok?Port=7777?QueryPort=27015?AltSaveDirectoryName=SaveRagnarok?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic="${GLOBAL_IP}" -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
 
   res="$?"
   sleep 1 # 0.1
@@ -32,8 +34,8 @@ updateCmd() {
   # You can use steamcmd to update many things
 
   # ark
-  cd /home/arkadmin/Steam
-  ./steamcmd.sh +login anonymous +force_install_dir /home/arkadmin/dediBash/serverFiles +app_update 376030 validate +quit
+  cd ~/Steam
+  ./steamcmd.sh +login anonymous +force_install_dir ~/dediBash/serverFiles +app_update 376030 validate +quit
 
   res="$?"
   sleep 1 # 0.1
