--- a/examples/arkRagnarok.cfg
+++ b/examples/arkRagnarok.cfg
@@ -11,7 +11,7 @@ startCmd() {
   LOCAL_IP=192.168.1.XX
   GLOBAL_IP=Y.Y.Y.Y
   cd serverFiles/ShooterGame/Binaries/Linux/
-  ./ShooterGameServer Ragnarok?listen?MultiHome="${LOCAL_IP}"?SessionName=zenbisRagnarok?Port=7777?QueryPort=27015?AltSaveDirectoryName=SaveRagnarok?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic="${GLOBAL_IP}" -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
+  ./ShooterGameServer Ragnarok?listen?MultiHome="${LOCAL_IP}"?SessionName=serverRagnarok?Port=7777?QueryPort=27015?AltSaveDirectoryName=SaveRagnarok?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic="${GLOBAL_IP}" -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
 
   res="$?"
   sleep 1 # 0.1
@@ -21,9 +21,10 @@ startCmd() {
 stopCmd() {
   # How the server is stopped goes inside of this call. htop is stopped by pressing q.
 
-
   # ark
-  screen -r "${screenName}" -p 0 -X stuff "^c"
+  STOP_INPUT="^c"
+  screen -r "${screenName}" -p 0 -X stuff "${STOP_INPUT}"
+
   res="$?"
   sleep 1 # 0.1
   return ${res}
@@ -48,7 +49,7 @@ sayCmd() {
   # Disabled by default
 
   # ark
-  echo "no messaging feature for this server"
+  echo "no messaging feature for this server to say ${1}"
 
   res="$?"
   sleep 1 # 0.1
