--- a/examples/factorio.cfg
+++ b/examples/factorio.cfg
@@ -1,39 +1,41 @@
 #!/bin/bash
 # server config file, all path relative to the dediBash folder (parent of the bin forlder)
 
-screenName=minecraftModpack
+screenName=factorio
 
 
 startCmd() {
   # Your start command goes here instead of htop, the rest is used to log errors
 
-  # modpack
-  cd serverFiles/Minecraft
-  ./startserver.sh # ragnamod
+  # factorio
+  cd serverFiles/
+  factorio/bin/x64/factorio --start-server serverWorld.zip --map-gen-settings map-gen-settings.json --map-settings map-settings.json --server-settings server-settings.json
 
   res="$?"
   sleep 1 # 0.1
   return ${res}
 }
 
+
 stopCmd() {
   # How the server is stopped goes inside of this call. htop is stopped by pressing q.
 
-  # minecraft
-  STOP_INPUT="stop$(printf '\r')"
+  # factorio
+  STOP_INPUT="/quit$(printf '\r')"
   screen -r "${screenName}" -p 0 -X stuff "${STOP_INPUT}"
 
   res="$?"
-  sleep 10 # modpack
+  sleep 1 # 0.1
   return ${res}
 }
+
 
 updateCmd() {
   # How to update the server
   # You can use steamcmd to update many things
   # Disabled by default
 
-  # minecraft
+  # factorio
   echo "manual update required"
 
   res="$?"
@@ -46,8 +48,8 @@ sayCmd() {
   # How to send a message to users through the server (in-game chat for example). Can be used to warn users of incoming server restarts, backups etc
   # Disabled by default
 
-  # minecraft
-  screen -r "${screenName}" -p 0 -X stuff "say ${1}$(printf '\r')"
+  # factorio
+  echo "no messaging feature for this server to say ${1}"
 
   res="$?"
   sleep 1 # 0.1
@@ -60,7 +62,7 @@ backupTimeout=600
 updateTimeout=600
 
 # the files to copy when backup is called (typically your save files)
-backupTarget="serverFiles/Minecraft/world"
+backupTarget="serverFiles/serverWorld.zip"
 
 # how to name the backup folders
 backupName="serverWorld"
