--- a/examples/minecraft.cfg
+++ b/examples/minecraft.cfg
@@ -20,7 +20,8 @@ stopCmd() {
   # How the server is stopped goes inside of this call. htop is stopped by pressing q.
 
   # minecraft
-  screen -r "${screenName}" -p 0 -X stuff "stop$(printf '\r')"
+  STOP_INPUT="stop$(printf '\r')"
+  screen -r "${screenName}" -p 0 -X stuff "${STOP_INPUT}"
 
   res="$?"
   sleep 1
