--- a/examples/test.cfg
+++ b/examples/test.cfg
@@ -16,7 +16,8 @@ startCmd() {
 stopCmd() {
   # How the server is stopped goes inside of this call. htop is stopped by pressing q.
 
-  screen -r "${screenName}" -p 0 -X stuff "stop$(printf '\r')"
+  STOP_INPUT="stop$(printf '\r')"
+  screen -r "${screenName}" -p 0 -X stuff "${STOP_INPUT}"
 
   res="$?"
   sleep 1 # 0.1
@@ -40,7 +41,7 @@ sayCmd() {
   # How to send a message to users through the server (in-game chat for example). Can be used to warn users of incoming server restarts, backups etc
   # Disabled by default
 
-  echo "no messaging feature for this server"
+  echo "no messaging feature for this server to say ${1}"
 
   res="$?"
   sleep 1 # 0.1
