--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 
 # Exceptions
 !/serverBackups/config_backups_model.cfg
-!/config_model.cfg
+!/config_model*.cfg
 !/serverFiles/README.md
 !/serverFiles/testServer.sh
 !/examples/*
