--- a/config_model.cfg
+++ b/config_model.cfg
@@ -2,77 +2,32 @@
 # server config file, all path relative to the dediBash folder (parent of the bin forlder)
 
 screenName=dediBash
-# screenName=minecraft
-# screenName=minecraftragna
-# screenName=ark
 
 
 startCmd() {
   # Your start command goes here instead of htop, the rest is used to log errors
 
-  # htop
-  htop
+  # starting sequence
 
-  # # minecraft
-  # cd serverFiles/Minecraft
-  # /usr/bin/java -Dfile.encoding=utf-8 -server -Xmx2048M -jar minecraft_server.jar nogui # vanilla
-  # ./startserver.sh # ragnamod
-
-  # # ark
-  # cd serverFiles/ShooterGame/Binaries/Linux/
-  # ./ShooterGameServer Ragnarok?listen?MultiHome=192.168.1.19?SessionName=zenbisRagnarok?Port=7777?QueryPort=27015?AltSaveDirectoryName=SaveRagnarok?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic=91.182.240.225 -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
 
   res="$?"
   sleep 1 # 0.1
   return ${res}
 }
 
-# startCmdIsland() {
-#   cd serverFiles/ShooterGame/Binaries/Linux/
-#   ./ShooterGameServer TheIsland?listen?MultiHome=192.168.1.19?SessionName=zenbisIsland?Port=7779?QueryPort=27016?AltSaveDirectoryName=SaveIsland?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic=91.182.240.225 -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
-#   res=$?
-#   sleep 1 # 0.1
-#   return ${res}
-# }
-#
-# startCmdValguero() {
-#   cd serverFiles/ShooterGame/Binaries/Linux/
-#   ./ShooterGameServer Valguero_P?listen?MultiHome=192.168.1.19?SessionName=zenbisValguero?Port=7779?QueryPort=27016?AltSaveDirectoryName=SaveValguero?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic=91.182.240.225 -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
-#   res=$?
-#   sleep 1 # 0.1
-#   return ${res}
-# }
-#
-# startCmdCenter() {
-#   cd serverFiles/ShooterGame/Binaries/Linux/
-#   ./ShooterGameServer TheCenter?listen?MultiHome=192.168.1.19?SessionName=zenbisCenter?Port=7779?QueryPort=27016?AltSaveDirectoryName=SaveCenter?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic=91.182.240.225 -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
-#   res=$?
-#   sleep 1 # 0.1
-#   return ${res}
-# }
 
 stopCmd() {
-  # How the server is stopped goes inside of this call. htop is stopped by pressing q.
+  # How the server is stopped goes inside of this call.
 
-  # htop
-  screen -r "${screenName}" -p 0 -X stuff "q"
+  # stop sequence
+  STOP_INPUT=""
+  screen -r "${screenName}" -p 0 -X stuff "${STOP_INPUT}"
 
-  # # minecraft
-  # screen -r "${screenName}" -p 0 -X stuff "stop$(printf '\r')"
-
-  # other
-  # screen -r "${screenName}" -p 0 -X stuff "/quit$(printf '\r')"
-  # screen -r "${screenName}" -p 0 -X stuff "^c"
   res="$?"
   sleep 1 # 0.1
-  # sleep 1 # vanilla
-  # sleep 10 # ragnamod
   return ${res}
 }
 
-# stopCmdIsland() {
-#   screen -r "${screenName}2" -p 0 -X stuff "^c"
-# }
 
 updateCmd() {
   # How to update the server
@@ -82,9 +37,6 @@ updateCmd() {
   # htop
   echo "manual update required"
 
-  # # ark
-  # cd /home/arkadmin/Steam
-  # ./steamcmd.sh +login anonymous +force_install_dir /home/arkadmin/dediBash/serverFiles +app_update 376030 validate +quit
 
   res="$?"
   sleep 1 # 0.1
@@ -97,10 +49,8 @@ sayCmd() {
   # Disabled by default
 
   # htop
-  echo "no messaging feature for this server"
+  echo "no messaging feature for this server to say ${1}"
 
-  # # minecraft vanilla
-  # screen -r "${screenName}" -p 0 -X stuff "say ${1}$(printf '\r')"
 
   res="$?"
   sleep 1 # 0.1
@@ -114,13 +64,9 @@ updateTimeout=600
 
 # the files to copy when backup is called (typically your save files)
 backupTarget="serverFiles"
-# backupTarget="serverFiles/Minecraft/world"
-# backupTarget="serverFiles/ShooterGame/Saved"
 
 # how to name the backup folders
 backupName="serverSaveFiles"
-# backupName="zenbisWorld"
-# backupName="zenbisSaved"
 
 # the full-backup option will target the entire serverFiles folder, useful before updates
 fullBackupTarget="serverFiles"
