--- a/examples/arkIsland.cfg
+++ b/examples/arkIsland.cfg
@@ -1,40 +1,45 @@
 #!/bin/bash
 # server config file, all path relative to the dediBash folder (parent of the bin forlder)
 
-screenName=minecraftModpack
+screenName=arkIsland
 
 
 startCmd() {
   # Your start command goes here instead of htop, the rest is used to log errors
 
-  # modpack
-  cd serverFiles/Minecraft
-  ./startserver.sh # ragnamod
+  # ark
+  LOCAL_IP="192.168.1.XX"
+  GLOBAL_IP="Y.Y.Y.Y"
+  cd serverFiles/ShooterGame/Binaries/Linux/
+  # TheIsland Ragnarok TheCenter Valguero_P
+  ./ShooterGameServer TheIsland?listen?MultiHome="${LOCAL_IP}"?SessionName=serverIsland?Port=7779?QueryPort=27016?AltSaveDirectoryName=SaveIsland?MaxPlayers=10?ForceFlyerExplosives=true?AllowCrateSpawnsOnTopOfStructures=True -clusterid=zenbiscluster -exclusivejoin -PublicIPForEpic="${GLOBAL_IP}" -ForceAllowCaveFlyers -NoBattlEye -noantispeedhack -servergamelog -crossplay -nosteamclient -server -log
 
   res="$?"
   sleep 1 # 0.1
   return ${res}
 }
 
+
 stopCmd() {
   # How the server is stopped goes inside of this call. htop is stopped by pressing q.
 
-  # minecraft
-  STOP_INPUT="stop$(printf '\r')"
+  # ark
+  STOP_INPUT="^c"
   screen -r "${screenName}" -p 0 -X stuff "${STOP_INPUT}"
 
   res="$?"
-  sleep 10 # modpack
+  sleep 1 # 0.1
   return ${res}
 }
+
 
 updateCmd() {
   # How to update the server
   # You can use steamcmd to update many things
-  # Disabled by default
 
-  # minecraft
-  echo "manual update required"
+  # ark
+  cd ~/Steam
+  ./steamcmd.sh +login anonymous +force_install_dir ~/dediBash/serverFiles +app_update 376030 validate +quit
 
   res="$?"
   sleep 1 # 0.1
@@ -46,8 +51,8 @@ sayCmd() {
   # How to send a message to users through the server (in-game chat for example). Can be used to warn users of incoming server restarts, backups etc
   # Disabled by default
 
-  # minecraft
-  screen -r "${screenName}" -p 0 -X stuff "say ${1}$(printf '\r')"
+  # ark
+  echo "no messaging feature for this server to say ${1}"
 
   res="$?"
   sleep 1 # 0.1
@@ -60,10 +65,11 @@ backupTimeout=600
 updateTimeout=600
 
 # the files to copy when backup is called (typically your save files)
-backupTarget="serverFiles/Minecraft/world"
+
+backupTarget="serverFiles/ShooterGame/Saved"
 
 # how to name the backup folders
-backupName="serverWorld"
+backupName="serverSaved"
 
 # the full-backup option will target the entire serverFiles folder, useful before updates
 fullBackupTarget="serverFiles"
