--- a/examples/minecraftVanilla/minecraft.cfg
+++ b/examples/minecraftVanilla/minecraft.cfg
@@ -9,7 +9,15 @@ startCmd() {
 
   # minecraft
   cd serverFiles/Minecraft
-  /usr/bin/java -Dfile.encoding=utf-8 -server -Xmx2048M -jar minecraft_server.jar nogui
+
+  JAVA="java"
+  JAR="minecraft_server.jar"
+  RAM="2G"
+  FLAGS="-XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true"
+
+  echo "Starting server..."
+  ${JAVA} -Dfile.encoding=utf-8 -server -Xmx${RAM} -Xms${RAM} ${FLAGS} -jar ${JAR} nogui
+  # /usr/bin/java -Dfile.encoding=utf-8 -server -Xmx2048M -jar minecraft_server.jar nogui
 
   res="$?"
   sleep 1 # 0.1
